adding in factories

--- a/partials/song-list.html
+++ b/partials/song-list.html
@@ -1,8 +1,8 @@
 <section>
   <div>
-    <input type="text" ng-model="songSearchText.name" placeholder="Search titles here"/>
+    <input type="text" ng-model="songSearchText.title" placeholder="Search titles here"/>
   </div>
-    <ul class="songs-list" ng-repeat="song in songs | filter: theSongs.artist || theSongs.album || songSearchText.name">
+    <ul class="songs-list" ng-repeat="song in songs | filter: theSongs.artist || theSongs.album || songSearchText">
       <li><a href="#/songs/{{ song.id }}">{{ song.title }} </a>is by {{song.artist}} on the album {{song.album}} <button ng-click="deleteSong(song)">Delete</button></li>
     </ul>
   <div>
