--- a/partials/song-detail.html
+++ b/partials/song-detail.html
@@ -1,6 +1,6 @@
-<section ng-model="song in songs">
+<section>
   <div>
-      <h1>{{ selectedSong.title }}</h1>
+      <h1 class="title">{{ selectedSong.title }}</h1>
       <h3>{{ selectedSong.artist }}</h3>
       <h3> on the album {{ selectedSong.album }}</h3>
   </div>
