showing songs with firebase

--- a/partials/song-detail.html
+++ b/partials/song-detail.html
@@ -1,7 +1,7 @@
 <section>
-  <div>
-      <h1 class="title">{{ selectedSong.title }}</h1>
-      <h3>{{ selectedSong.artist }}</h3>
-      <h3> on the album {{ selectedSong.album }}</h3>
+  <div class="songItem">
+      <h1 >{{ selectedSong.title }}</h1>
+      <h3 >{{ selectedSong.artist }}</h3>
+      <h3 > on the album {{ selectedSong.album }}</h3>
   </div>
 </section>
